--- a/views/loginpage.html
+++ b/views/loginpage.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-<div class="app-container app-theme-white body-tabs-shadow">
+    <div class="app-container app-theme-white body-tabs-shadow">
         <div class="app-container">
             <div class="h-100 bg-plum-plate bg-animation">
                 <div class="d-flex h-100 justify-content-center align-items-center">
@@ -27,18 +27,26 @@
                                     <form class="">
                                         <div class="form-row">
                                             <div class="col-md-12">
-                                                <div class="position-relative form-group"><input name="email" id="exampleEmail" placeholder="Email Adresi..." type="email" class="form-control"></div>
+                                                <div class="position-relative form-group"><input name="email" id="email"
+                                                        placeholder="Email Adresi..." type="email" class="form-control">
+                                                </div>
                                             </div>
                                             <div class="col-md-12">
-                                                <div class="position-relative form-group"><input name="password" id="examplePassword" placeholder="Parola..." type="password" class="form-control"></div>
+                                                <div class="position-relative form-group"><input name="password"
+                                                        id="password" placeholder="Parola..." type="password"
+                                                        class="form-control"></div>
+                                            </div>   <div class="col-md-12">
+                                                <div class="position-relative form-group" id="warning"></div>
                                             </div>
-                                        </div>                                        
+                                        </div>
                                     </form>
                                 </div>
                                 <div class="modal-footer clearfix">
-                                    <div class="float-left"><a href="javascript:void(0);" class="btn-lg btn btn-link">Parolamı unuttum</a></div>
+                                    <div class="float-left"><a href="javascript:void(0);" class="btn-lg btn btn-link"
+                                            id="btnlogin">Parolamı unuttum</a></div>
                                     <div class="float-right">
-                                        <button class="btn btn-primary btn-lg" onclick="location.href='yonetim-paneli';">Yönetim Paneline Giriş</button>
+                                        <input type="button" class="btn btn-primary btn-lg" onclick="test('sdsd')"
+                                            value="Yönetim Paneline Giriş" id="btnlogin">
                                     </div>
                                 </div>
                             </div>
@@ -48,9 +56,44 @@
                 </div>
             </div>
         </div>
-</div>
+    </div>
 
-{{>foot}}
+    {{>foot}}
+    <script>
+        function test(data) {
+            var email = $("#email").val();
+            var pass = $("#password").val();
+            $.post("/login", { user: email, password: pass },// url
+                function (data, textStatus, jqXHR) {  // success callback
+                    if (data == "1") {
+                        window.location.href = "/yonetim-paneli";
+                        // location.href = "/mainpage";
+                    }
+                    else {
+                        alert(data);
+                    }
+                }).done(function () {
+                        if(data==1){
+                            window.location.href = "/yonetim-paneli";
+                  
+                        }
+                        else{
+                            $("#warning").empty().append("Paralo veya Kullanıcı Adı Yanlış");
+                        }
 
+                })
+                .fail(function () {
+                    $("#warning").empty().append("Beklenmedik Bir Hata İle Karşılaşıldı");
+                });
+        }
+        $("#btnlogin").click(function () {
+
+        });
+
+
+
+
+    </script>
 </body>
+
 </html>
