--- a/views/kitlerekatologekleme.html
+++ b/views/kitlerekatologekleme.html
@@ -872,7 +872,7 @@
     var kitkod = "";
     $(document).ready(function () {
         kitmarkasi = sessionStorage.getItem("kitmarkasi");
-        kitkod = sessionStorage.getItem("kurumkodu");
+        kitkod = sessionStorage.getItem("kitkodu");
         $("#hdnkitkod").val(kitkod);
         $("#kitmarkasi").html(kitmarkasi);
 
