--- a/views/mainpage.html
+++ b/views/mainpage.html
@@ -88,7 +88,7 @@
                                                         <li class="nav-item-divider nav-item">
                                                         </li>
                                                         <li class="nav-item-btn text-center nav-item">
-                                                            <a href="/login" class="btn-wide btn btn-primary btn-sm">
+                                                            <a href="/" class="btn-wide btn btn-primary btn-sm">
                                                                 Çıkış Yap
                                                             </a>
                                                         </li>
